First Release of Snake

--- a/_posts/tutorial/2020-04-12-snake.md
+++ b/_posts/tutorial/2020-04-12-snake.md
@@ -4,6 +4,7 @@ layout: post
 category: tutorial
 ---
 
+{% capture code %}
 <div id='game'></div>
 
 <script>
@@ -11,18 +12,27 @@ var ctx;
 
 var tickrate = 200;
 
+var score = 0;
+
 var player = {
   dx: 10,
   dy: 0,
   x: 0,
   y: 0,
-  size: 1,
+  size: 0,
 };
+
+var tail = [
+];
 
 var food = {
   x: 90,
   y: 90,
 };
+
+function getRandomInt(min, max) {
+  return Math.floor(Math.random() * (max - min + 1) + min);
+}
 
 function ready() {
     var root = document.querySelector('#game');
@@ -32,6 +42,12 @@ function ready() {
     canvas.height = 200;
     ctx = canvas.getContext('2d');
     root.appendChild(canvas);
+
+    player.x = getRandomInt(0,19) * 10;
+    player.y = getRandomInt(0,19) * 10;
+
+    food.x = getRandomInt(0,19) * 10;
+    food.y = getRandomInt(0,19) * 10;
 
     window.onkeydown = function(e) {
         e.preventDefault();
@@ -63,12 +79,20 @@ function ready() {
 
 function update() {
     if(player.x === food.x && player.y === food.y) {
-        food.x = 40;
-        food.y = 40;
+        food.x = getRandomInt(0, 19) * 10;
+        food.y = getRandomInt(0, 19) * 10;
+        score += 10;
+        player.size += 1;
     }
 
     ctx.globalCompositeOperation = 'destination-over';
     ctx.clearRect(0, 0, 200, 200);
+
+    tail.push({ x: player.x, y: player.y });
+
+    if(tail.length > player.size) {
+        tail.shift();
+    }
 
     player.x += player.dx;
     player.y += player.dy;
@@ -76,8 +100,16 @@ function update() {
     ctx.fillStyle = 'green';
     ctx.fillRect(player.x, player.y, 10, 10);
 
+    for(var i=0; i<tail.length; i++) {
+        ctx.fillStyle = 'green';
+        ctx.fillRect(tail[i].x, tail[i].y, 10, 10);
+    }
+
     ctx.fillStyle = 'red';
     ctx.fillRect(food.x, food.y, 10, 10);
+
+    ctx.font = '10px sans-serif'
+    ctx.fillText("score - " + score, 0, 200);
 
     setTimeout(function() {
         window.requestAnimationFrame(update);
@@ -87,6 +119,9 @@ function update() {
 ready();
 
 </script>
+{% endcapture %}
+
+{{ code }}
 
 ## Objective
 
@@ -249,7 +284,7 @@ function update() {
 
 ```
 
-Next we should detect when the player occupies the same space to eat the food. We can do this by adding some logic before the drawing functions.
+Next we should detect when the player occupies the same space to eat the food. We can accomplish this by adding some logic to detect when the player's `x` and `y` coordinate are the same.
 
 ```
 var food = {
@@ -261,6 +296,7 @@ function update() {
     if(player.x === food.x && player.y === food.y) {
         food.x = 40;
         food.y = 40;
+        player.size += 1;
     }
 
     ctx.globalCompositeOperation = 'destination-over';
@@ -283,7 +319,106 @@ function update() {
 ```
 
 
+### Keeping score
 
-### Resources
+We also want to keep score and have the tail of the snake's grow as it eats food.
 
-https://developer.mozilla.org/en-US/docs/Web/API/Canvas_API/Tutorial/Basic_animations
+First we will add another variable `score`
+
+```
+var score = 0;
+```
+
+We will increment this number when we eat the food by 10.
+
+```
+if(player.x === food.x && player.y === food.y) {
+  score += 10;
+}
+```
+
+Displaying the score is important for the player to know. We can use the [fillText](https://developer.mozilla.org/en-US/docs/Web/API/Canvas_API/Tutorial/Drawing_text) function on the `canvas` object.
+
+```
+ctx.font = '10px sans-serif';
+ctx.fillText("score - " + score, 0, 200);
+```
+
+### Adding Randomness
+
+Currently we have the same start point for our food and snake. We also have a known location as to where the food will end up. Having the same expected state makes for a boring game. We can add some randomness by leveraging [Math.random()](https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/Math/random);
+
+Because of the contraints in our game we should place our objects in a visible location on the board. It should also be a number divisible by 10. Doing a little bit of math, out board is 200x200 pixels, divide by 10 and we get 20. We can find a random integer between 0 and 19 (inclusive) to find a random location on the board.
+
+
+First let us write our [random integer function](https://stackoverflow.com/a/21996472):
+```
+function getRandomInt(min, max) {
+  return Math.floor(Math.random() * (max - min + 1) + min);
+}
+```
+
+When the game starts we should choose a safe location for the player and the first food item. We can do this in our `ready` function.
+
+```
+player.x = getRandomInt(0,19) * 10;
+player.y = getRandomInt(0,19) * 10;
+
+food.x = getRandomInt(0, 19) * 10;
+food.y = getRandomInt(0, 19) * 10;
+```
+
+
+Then when the player eats the food we should call the random integer function to place the food
+
+```
+if(player.x === food.x && player.y === food.y) {
+    food.x = getRandomInt(0, 19) * 10;
+    food.y = getRandomInt(0, 19) * 10;
+    // ...
+}
+```
+
+### Growing the tail
+
+I chose to keep the track of how long to draw the tail by having an array of tail coordinates that I can push and pop off depending on the state.
+
+First we start off with an empty array for the tail
+
+```
+var tail = [
+];
+```
+
+Every frame I push the current player's coordinates onto the tail array. This should be done before updating the player's coordinates to make a proper trail.
+
+```
+tail.push({ x: player.x, y: player.y });
+```
+
+If the length of the tail array exceeds the player's size then I remove the last element in the array via `shift`. 
+
+```
+if(tail.length > player.size) {
+  tail.shift();
+}
+```
+
+Finally I draw all of the tail elements on the screen.
+
+```
+for(var i=0; i<tail.length; i++) {
+    ctx.fillStyle = 'green';
+    ctx.fillRect(tail[i].x, tail[i].y, 10, 10);
+}
+```
+
+## Source Code
+
+<pre>{{ code | escape }}</pre>
+
+## Resources
+
+* https://stackoverflow.com/questions/21996456/generate-a-random-number-which-is-divisible-by-10
+* https://developer.mozilla.org/en-US/docs/Web/API/CanvasRenderingContext2D/globalCompositeOperation
+* https://developer.mozilla.org/en-US/docs/Web/API/Canvas_API/Tutorial/Basic_animations
