Snake - restricting movement and setting a gameover state

--- a/_posts/tutorial/2020-04-12-snake.md
+++ b/_posts/tutorial/2020-04-12-snake.md
@@ -30,6 +30,8 @@ var food = {
   y: 90,
 };
 
+var gameover = false;
+
 function getRandomInt(min, max) {
   return Math.floor(Math.random() * (max - min + 1) + min);
 }
@@ -54,21 +56,37 @@ function ready() {
         e.stopPropagation();
 
         if(e.keyCode === 37 || e.key === "ArrowLeft") {
+            if(tail.length > 0 && player.dx > 0) {
+                return;
+            }
+
             player.dx = -10;
             player.dy = 0;
         }
 
         if(e.keyCode === 39 || e.key === "ArrowRight") {
+            if(tail.length > 0 && player.dx < 0) {
+                return;
+            }
+
             player.dx = 10;
             player.dy = 0;
         }
 
         if(e.keyCode === 38 || e.key === "ArrowUp") {
+            if(tail.length > 0 && player.dy > 0) {
+                return;
+            }
+
             player.dx = 0;
             player.dy = -10;
         }
 
         if(e.keyCode === 40 || e.key === "ArrowDown") {
+            if(tail.length > 0 && player.dy < 0) {
+                return;
+            }
+
             player.dx = 0;
             player.dy = 10;
         }
@@ -78,6 +96,18 @@ function ready() {
 }
 
 function update() {
+    ctx.globalCompositeOperation = 'destination-over';
+    ctx.clearRect(0, 0, 200, 200);
+
+    if(gameover) {
+        ctx.clearRect(0, 0, 200, 200);
+        ctx.fillStyle = 'red';
+        ctx.font = '20px sans-serif'
+        ctx.fillText("GAME OVER", 38, 100);
+        ctx.fillText("score - " + score, 0, 200);
+        return ;
+    }
+
     if(player.x === food.x && player.y === food.y) {
         food.x = getRandomInt(0, 19) * 10;
         food.y = getRandomInt(0, 19) * 10;
@@ -85,10 +115,16 @@ function update() {
         player.size += 1;
     }
 
-    ctx.globalCompositeOperation = 'destination-over';
-    ctx.clearRect(0, 0, 200, 200);
 
-    tail.push({ x: player.x, y: player.y });
+    for(var i=0; i<tail.length; i++) {
+        if(tail[i].x === player.x && tail[i].y === player.y) {
+            gameover = true;
+            window.requestAnimationFrame(update);
+            return 
+        }
+    }
+
+     tail.push({ x: player.x, y: player.y });
 
     if(tail.length > player.size) {
         tail.shift();
@@ -127,9 +163,10 @@ ready();
 
 The objective is to create a [snake](https://en.wikipedia.org/wiki/Snake) like game with the following requirements and constraints:
 
+* The is a 200x200 pixel game board.
 * The player starts at a random safe location on the game board.
-* Eating food increases the game rate.
-* The game will be written using standard javascript web apis
+* Eating food increases the length of the snake.
+* The game will be written using standard javascript web apis.
 
 
 ### Drawing on the canvas
@@ -157,7 +194,7 @@ I decided to make two primary functions for this game `ready` and `update`.
 * `ready` - serves as a function to initialize the game and set up event listeners
 * `update` - the game loop. Every iteration will update the state of the game and draw the results on the canvas
 
-```
+```javascript
 var ctx;
 
 function ready() {
@@ -187,7 +224,7 @@ ready();
 
 Our first iteration will be to draw a representation of the player on the board. To keep things simple we will represent the player as a green 10x10 pixel box.
 
-```
+```javascript
 function update() {
     ctx.fillStyle = 'green';
     ctx.fillRect(10, 10, 10, 10);
@@ -196,7 +233,7 @@ function update() {
 
 Since we eventaully would like to be able to move the player on the game board we can create a `player` variable that will hold the current state of where the player is located and the vector (`dx`,`dy`) which will tell us which direction the player is traveling each frame.
 
-```
+```javascript
 var player = {
   x: 10,
   y: 10,
@@ -223,7 +260,7 @@ If we were to play the game at this point we might notice green square fly off t
 
 Now we want the player to be able to control the green snake friend.
 
-```
+```javascript
 function ready() {
     window.onkeydown = function(e) {
         e.preventDefault();
@@ -258,7 +295,7 @@ We need an goal for the player to achieve. In this type of game it involves coll
 
 First we will start by just drawing something to represent the food.
 
-```
+```javascript
 var food = {
   x: 90,
   y: 90,
@@ -286,7 +323,7 @@ function update() {
 
 Next we should detect when the player occupies the same space to eat the food. We can accomplish this by adding some logic to detect when the player's `x` and `y` coordinate are the same.
 
-```
+```javascript
 var food = {
   x: 90,
   y: 90,
@@ -325,13 +362,13 @@ We also want to keep score and have the tail of the snake's grow as it eats food
 
 First we will add another variable `score`
 
-```
+```javascript
 var score = 0;
 ```
 
 We will increment this number when we eat the food by 10.
 
-```
+```javascript
 if(player.x === food.x && player.y === food.y) {
   score += 10;
 }
@@ -339,7 +376,7 @@ if(player.x === food.x && player.y === food.y) {
 
 Displaying the score is important for the player to know. We can use the [fillText](https://developer.mozilla.org/en-US/docs/Web/API/Canvas_API/Tutorial/Drawing_text) function on the `canvas` object.
 
-```
+```javascript
 ctx.font = '10px sans-serif';
 ctx.fillText("score - " + score, 0, 200);
 ```
@@ -352,7 +389,7 @@ Because of the contraints in our game we should place our objects in a visible l
 
 
 First let us write our [random integer function](https://stackoverflow.com/a/21996472):
-```
+```javascript
 function getRandomInt(min, max) {
   return Math.floor(Math.random() * (max - min + 1) + min);
 }
@@ -360,7 +397,7 @@ function getRandomInt(min, max) {
 
 When the game starts we should choose a safe location for the player and the first food item. We can do this in our `ready` function.
 
-```
+```javascript
 player.x = getRandomInt(0,19) * 10;
 player.y = getRandomInt(0,19) * 10;
 
@@ -371,7 +408,7 @@ food.y = getRandomInt(0, 19) * 10;
 
 Then when the player eats the food we should call the random integer function to place the food
 
-```
+```javascript
 if(player.x === food.x && player.y === food.y) {
     food.x = getRandomInt(0, 19) * 10;
     food.y = getRandomInt(0, 19) * 10;
@@ -385,20 +422,20 @@ I chose to keep the track of how long to draw the tail by having an array of tai
 
 First we start off with an empty array for the tail
 
-```
+```javascript
 var tail = [
 ];
 ```
 
 Every frame I push the current player's coordinates onto the tail array. This should be done before updating the player's coordinates to make a proper trail.
 
-```
+```javascript
 tail.push({ x: player.x, y: player.y });
 ```
 
 If the length of the tail array exceeds the player's size then I remove the last element in the array via `shift`. 
 
-```
+```javascript
 if(tail.length > player.size) {
   tail.shift();
 }
@@ -406,12 +443,89 @@ if(tail.length > player.size) {
 
 Finally I draw all of the tail elements on the screen.
 
-```
+```javascript
 for(var i=0; i<tail.length; i++) {
     ctx.fillStyle = 'green';
     ctx.fillRect(tail[i].x, tail[i].y, 10, 10);
 }
 ```
+
+## End State
+
+In this game the end state is when the player runs into a section of its own tail. 
+
+First lets make a varible `gameover` to detect if the game is over.
+
+We will check the value of the `gameover` flag every update tick. If the value is `true` then we will draw the game over screen.
+
+```javascript
+if(gameover) {
+    ctx.clearRect(0, 0, 200, 200);
+    ctx.fillStyle = 'red';
+    ctx.font = '20px sans-serif'
+    ctx.fillText("GAME OVER", 38, 100);
+    ctx.fillText("score - " + score, 0, 200);
+    return ;
+}
+```
+
+Before we start drawing the tail we will check to see if the head of the snake occupies the same space. We will then force a frame update so that we show the game over screen immediatley.
+
+```javascript
+for(var i=0; i<tail.length; i++) {
+    if(tail[i].x === player.x && tail[i].y === player.y) {
+        gameover = true;
+        window.requestAnimationFrame(update);
+        return;
+    }
+}
+```
+
+We also need to restrict the movement of the snake head if there is a tail. We will change the controls in `window.onkeydown` to detect when the player attempts to move in the opposite direction without trying to "turn" first.
+
+```javascript
+window.onkeydown = function(e) {
+    e.preventDefault();
+    e.stopPropagation();
+
+    if(e.keyCode === 37 || e.key === "ArrowLeft") {
+        if(tail.length > 0 && player.dx > 0) {
+            return;
+        }
+
+        player.dx = -10;
+        player.dy = 0;
+    }
+
+    if(e.keyCode === 39 || e.key === "ArrowRight") {
+        if(tail.length > 0 && player.dx < 0) {
+            return;
+        }
+
+        player.dx = 10;
+        player.dy = 0;
+    }
+
+    if(e.keyCode === 38 || e.key === "ArrowUp") {
+        if(tail.length > 0 && player.dy > 0) {
+            return;
+        }
+
+        player.dx = 0;
+        player.dy = -10;
+    }
+
+    if(e.keyCode === 40 || e.key === "ArrowDown") {
+        if(tail.length > 0 && player.dy < 0) {
+            return;
+        }
+
+        player.dx = 0;
+        player.dy = 10;
+    }
+}
+```
+
 
 ## Source Code
 
